--- a/app/scripts/templates/home/default.html
+++ b/app/scripts/templates/home/default.html
@@ -15,7 +15,9 @@
 
 		<!-- dj wrapper -->
 		<div id="dj-wrapper">
-			<div class="dj-image" v-style="background-image: 'url(' + image + ')';"></div>
+			<div class="dj-image {{djImageStateClassOne}}" v-style="background-image: 'url(' + imageOne + ')';"></div>
+			<div class="dj-image {{djImageStateClassTwo}}" v-style="background-image: 'url(' + imageTwo + ')';"></div>
+			<div class="dj-image info {{djImageInfoStateClass}}">{{djImageInfo}}</div>
 		</div>
 		
 		<!-- system info wrapper -->
