--- a/app/scripts/templates/home/default.html
+++ b/app/scripts/templates/home/default.html
@@ -30,26 +30,28 @@
 	</div>
 
 	<div id="playlist-wrapper" class="clearfix">
+		<ul>
+			<li v-repeat="playlist" class="playlist">
+				<div class="line-text">{{$key}}.</div>
+				<div class="line-title">{{t_title}}</div>		
+			</li>
+		</ul>
+		
+		<!-- upload wrapper single file -->	
+		<div id="upload-wrapper">
+			<input type="file" id="upload-file-field" class="hide">
+			<button id="trigger-upload-file" class="{{triggerUploadFileStateClass}}" v-on="click: triggerFileBrowser">select track</button>
 
-			<!-- upload wrapper single file -->	
-			<div id="upload-wrapper">
-				<input type="file" id="upload-file-field" class="hide">
-				<button id="trigger-upload-file" class="{{triggerUploadFileStateClass}}" v-on="click: triggerFileBrowser">select track</button>
-
-				<div id="upload-control-wrapper" class="{{uploadFileControlWrapperStateClass}}">
-					<button id="upload-file">upload track</button>
-					<button id="cancel-upload-file">cancel</button>
-				</div>
-				
-				<div id="file-control-wrapper" class="{{fileControlStateClass}}">
-					<button id="upload-file" v-on="click: deleteUserTrack()">delete track</button>
-				</div>
-
-				<div id="track-url">
-					{{userTrackUrl}}
-				</div>
+			<div id="upload-control-wrapper" class="{{uploadFileControlWrapperStateClass}}">
+				<button id="upload-file">upload track</button>
+				<button id="cancel-upload-file">cancel</button>
 			</div>
-
+			
+			<div id="file-control-wrapper" class="{{fileControlStateClass}}">
+				<button id="upload-file" v-on="click: deleteUserTrack()">delete track</button>
+			</div>
 		</div>
+
+	</div>
 
 </div>
