--- a/app/styles/scss/main.scss
+++ b/app/styles/scss/main.scss
@@ -46,11 +46,13 @@ $white: #ffffff;
 $mainColorDark: #009bb2;  // dark cyan
 $mainColorLight: #33afc1;  // light cyan
 $bgColor: #17404d; // background
-$btnColorLight: #ffcc00; // orange light
+$btnColorLight: #ffda46; // orange light
+$btnColorMiddle: #ffcc00; // orange light
 $btnColorDark: #ffa200; // orange light
 $btnDownvoteDisabled: #77ced4;
 $iconSystemInfo: #637f88;
 $downvoteMessage: #ffffff;
+$playlistText: #17404d;
 $playlistLine1: #009bb2;
 $playlistLine2: #1aa5ba;
 $playlistLine3: #33afc1;
@@ -184,7 +186,7 @@ body{
                 background-color: $btnColorDark;
                 li{
                     float:left;
-                    background-color: $btnColorLight;
+                    background-color: $btnColorMiddle;
                     position: relative;
                     a{
                         height: $btnHeight;
@@ -223,7 +225,7 @@ body{
                     }
                     &:nth-child(1){
                         background-color: $mainColorDark;
-                        @include skewedBorder(right, -9px, 0, 20px, $btnColorLight); // = direction, directionValue, zIndex, width, color
+                        @include skewedBorder(right, -9px, 0, 20px, $btnColorMiddle); // = direction, directionValue, zIndex, width, color
                         padding-left: 5px;
                         a{
                             &.active{
@@ -238,7 +240,7 @@ body{
                         }
                     }
                     &:nth-child(2){
-                        background-color: $btnColorLight;
+                        background-color: $btnColorMiddle;
                         @include skewedBorder(right, -9px, 0, 20px, $btnColorDark); // = direction, directionValue, zIndex, width, color
                     }
                     &:nth-child(3){
@@ -320,10 +322,10 @@ body{
                         #downvote-button{
                             padding-left: 2px;
                             position: relative;
-                            background-color: $btnColorLight;
+                            background-color: $btnColorMiddle;
                             width: 10vw;
                             text-align: center;
-                            @include skewedBorder(right, -10px, -1, 30px, $btnColorLight); // = direction, directionValue, zIndex, width, color
+                            @include skewedBorder(right, -10px, -1, 30px, $btnColorMiddle); // = direction, directionValue, zIndex, width, color
                             &.disabled{
                                 background-color: $btnDownvoteDisabled;
                                 @include skewedBorder(right, -10px, -1, 30px, $btnDownvoteDisabled); // = direction, directionValue, zIndex, width, color
@@ -385,19 +387,19 @@ body{
 
                         .line-text {
                             padding: 12px 0 0 6px;
-                            color: #17404d;
+                            color: $playlistText;
                             float: left;
                         }
 
                         .line-title {
                             padding: 12px 0 0 6px;
-                            color: #17404d;
+                            color: white;
                             float: left;
                         }
 
                         .playlist-button {
-                            padding: 12px 0 0 6px;
-                            margin-right: 25px;
+                            padding: 12px 25px 0 6px;
+                            height: 28px;
                             float: right;
                         }
 
@@ -405,6 +407,20 @@ body{
                             cursor: pointer;
                             color: orange;
                         }
+
+                        .delete-button {
+                            background-color: $btnColorDark;
+                        }
+
+                        .swapup-button {
+                            background-color: $btnColorMiddle;
+                        }
+                        
+                        .swapdown-button {
+                            background-color: $btnColorLight;
+                        }
+
+
                     }
 
                     #upload-wrapper{
@@ -422,7 +438,7 @@ body{
                         border: 1px solid gray;
                         background-color: #ffffff;
                     }
-                    .hide{ 
+                    .hide{
                         display: none;
                     }
                 }
