--- a/app/scripts/templates/home/default.html
+++ b/app/scripts/templates/home/default.html
@@ -39,22 +39,23 @@
 				<div id="delete-{{t_id}}" class="playlist-button delete-button" v-if="t_title" v-on="click: deleteUserTrack(t_id)">D</div>	
 				<div id="swapup-{{$key}}" class="playlist-button swapup-button" v-if="t_title" v-on="click: swapUserTrack($key, 'up')">u</div>
 				<div id="swapdown-{{$key}}" class="playlist-button swapdown-button" v-if="t_title" v-on="click: swapUserTrack($key, 'down')">d</div>
-				<div class="playlist-button" v-if="!t_title">test</div>
+				
+				<div id="upload-wrapper" class="empty-field" v-if="!t_title">
+					<input type="file" id="upload-file-field" class="hide">
+					<div id="trigger-upload-file" class="playlist-button browse-button {{triggerUploadFileStateClass}}" v-on="click: triggerFileBrowser">...</div>
+
+					<div id="upload-control-wrapper" class="{{uploadFileControlWrapperStateClass}}">
+						<div id="upload-file" class="playlist-button upload-button">upload track</div>
+						<div id="cancel-upload-file" class="playlist-button cancel-button">cancel</div>
+					</div>
+					
+					
+				</div>
 			</li>
 		</ul>
 		
 		<!-- upload wrapper single file -->	
-		<div id="upload-wrapper">
-			<input type="file" id="upload-file-field" class="hide">
-			<button id="trigger-upload-file" class="{{triggerUploadFileStateClass}}" v-on="click: triggerFileBrowser">select track</button>
-
-			<div id="upload-control-wrapper" class="{{uploadFileControlWrapperStateClass}}">
-				<button id="upload-file">upload track</button>
-				<button id="cancel-upload-file">cancel</button>
-			</div>
-			
-			
-		</div>
+		
 
 	</div>
 
