--- a/app/scripts/templates/home/default.html
+++ b/app/scripts/templates/home/default.html
@@ -34,7 +34,7 @@
 	<div id="playlist-wrapper" class="clearfix">
 		<ul>
 			<li v-repeat="playlist" class="playlist">
-				<div class="line-text">{{$index + 1}}.</div>
+				<div id="line-{{$index + 1}}" class="line-text">{{$index + 1}}.</div>
 				<div class="line-title">{{t_title}}</div>
 				<div class="playlist-button delete-button" v-if="t_title" v-on="click: deleteUserTrack(t_id)">D</div>	
 				<div class="playlist-button swapup-button" v-if="t_title" v-on="click: swapUserTrack(($index + 1), 'up')">u</div>
