--- a/app/styles/scss/main.scss
+++ b/app/styles/scss/main.scss
@@ -386,7 +386,7 @@ body{
                         .line-wrapper {
 
                             .progressbar {
-                                width: 0%;
+                                @include transition(width, 1s, linear);
                                 height: 40px;
                                 background-color: $btnColorDark;
                                 position: absolute;
