worked on playlist

--- a/app/scripts/templates/home/default.html
+++ b/app/scripts/templates/home/default.html
@@ -33,7 +33,7 @@
 
 	<div id="playlist-wrapper" class="clearfix">
 		<ul>
-			<li v-repeat="playlist" class="playlist" v-on="click: setPlaylist(this)">
+			<li v-repeat="playlist" class="playlist" v-on="click: setPlaylistLine(this)">
 
 				<div class="line-wrapper">
 					<div class="progressbar" v-on="click: cancelDelete(this)"></div>
